--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,6 @@
 {
   "semi": true,
-  "singleQuote": true,
   "trailingComma": "all",
   "printWidth": 120,
-  "tabWidth": 2,
-  "plugins": ["prettier-plugin-organize-imports"]
+  "tabWidth": 2
 }
