--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.0",
     "react-responsive": "^10.0.1",
-    "tailwindcss": "^4.1.5",
-    "three": "^0.176.0"
+    "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
