--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "tailwindcss": "^4.1.5"
   },
@@ -34,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
+    "sass-embedded": "^1.87.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
